--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">flaffybird</string>
+    string name="demarre">Démarrer le jeu</string>
+    <string name="first_fragment_label">page d\'acceuil</string>
+    <string name="messageId">Game Over</string>
+    <string name="lose">Vous Avez Perdu</string>
+    <string name="reset_game">Nouvelle Partie</string>
 </resources>
